test/files/neg/package-ob-case.check
package-ob-case.scala:3: warning: it is not recommended to define classes/objects inside of package objects.
If possible, define class X in package foo instead.
    case class X(z: Int) { }
               ^
package-ob-case.scala:3: error: implementation restriction: package object foo cannot contain case class X. Instead, class X should be placed directly in package foo.
    case class X(z: Int) { }
               ^
one warning found
one error found
